Change front matter

--- a/_posts/2016-09-26-Test-Post.md
+++ b/_posts/2016-09-26-Test-Post.md
@@ -1,6 +1,11 @@
 ---
-layout: post
+layout: single
 title: Test Post OMG!
+author_profile: true
+read_time: true
+comments: true
+share: true
+related: true
 ---
 
 This is a test post omg
