Added new post, formatted others

--- a/_posts/2016-09-26-Update.md
+++ b/_posts/2016-09-26-Update.md
@@ -8,7 +8,8 @@ share: true
 related: true
 ---
 
-This website was created for CPSC 300 Software Engineering at UNBC. After playing
+This website was created for As a way for me to show what I've worked on
+and put down some thoughts. After playing
 around with jekyll for a few hours I am starting to see the potential and I'm
 looking forward to working more with it.
 
