--- a/_posts/2016-09-26-Test-Post.md
+++ b/_posts/2016-09-26-Test-Post.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: Test Post OMG!
+title: Test Post
 author_profile: true
 read_time: true
 comments: true
@@ -8,4 +8,4 @@ share: true
 related: true
 ---
 
-This is a test post omg
+This is a test post.
