--- a/_posts/2016-09-26-Update.md
+++ b/_posts/2016-09-26-Update.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: Update Post OMG!
+title: Update Post
 author_profile: true
 read_time: true
 comments: true
@@ -8,7 +8,7 @@ share: true
 related: true
 ---
 
-This website was created for As a way for me to show what I've worked on
+This website was created as a way for me to show what I've worked on
 and put down some thoughts. After playing
 around with jekyll for a few hours I am starting to see the potential and I'm
 looking forward to working more with it.
